Document Liberty as first-class Java/JVM recommendation framework
Update public and internal planned-feature docs for dual-axis runtime/framework
detection, Liberty metrics and executor/JDBC guidance, and explicit exclusion of
migrate-to-Liberty recommendations. Tracks pgarciaq/ros-ocp-backend#340.